Converted "required-symbol" to regularly use "requiredField" class Fixed potential nested-form issue Fixed some duplicate IDs More spacing cleanup

--- a/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/animals/animals.component.scss
+++ b/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/animals/animals.component.scss
@@ -10,11 +10,6 @@ mat-form-field {
   height: 55px;
 }
 
-.required-symbol {
-  font-size: 21px;
-  color: red;
-}
-
 .details-button {
   width: 100%;
 }
