--- a/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/evacuation-details/evacuation-details.component.scss
+++ b/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/evacuation-details/evacuation-details.component.scss
@@ -29,11 +29,6 @@
   color: #234075;
 }
 
-.required-symbol {
-  font-size: 21px;
-  color: red;
-}
-
 .prim-address {
   font-weight: 700;
   line-height: 10px;
