--- a/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/household-members/household-members.component.scss
+++ b/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/household-members/household-members.component.scss
@@ -8,11 +8,6 @@
   color: #234075;
 }
 
-.required-symbol {
-  font-size: 21px;
-  color: red;
-}
-
 .no-margin {
   margin: 0;
 }
@@ -50,7 +45,7 @@
 }
 
 .back {
-    width: 40%;
+  width: 40%;
 }
 
 .mobile-label {
