--- a/responders/src/UI/embc-responder/src/app/shared/forms/pet-form/pet-form.component.scss
+++ b/responders/src/UI/embc-responder/src/app/shared/forms/pet-form/pet-form.component.scss
@@ -1,14 +1,9 @@
 mat-form-field {
-    width: 100%;
+  width: 100%;
 }
 
 .card-heading {
-    font-size: 21px;
-    color: #234075;
-    line-height: 21px;
-}
-
-.required-symbol {
-    font-size: 21px;
-    color: red;
+  font-size: 21px;
+  color: #234075;
+  line-height: 21px;
 }
